--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "output"]
 	path = output
-	url = https://github.com/mradamcox/mradamcox.github.io.git
+	url = https://github.com/mradamcox/mradamcox.github.io
