--- a/.github/workflows/pelican.yml
+++ b/.github/workflows/pelican.yml
@@ -4,7 +4,7 @@ on:
   # Trigger the workflow on push on main branch,
   push:
     branches:
-      - master
+      - main
   workflow_dispatch:
 
 jobs:
